Added: create transaction swagger route
